Resolves: rtl: tdf#60315 slide pane context menu misplaced

so use same (slighty crazed) logic as DrawViewShell::Command

to get the right place when rtl is enabled

Change-Id: Icb4a39310ab98bd186cbafd516ca5f323da8cce1