sd/source/ui/slidesorter/controller/SlideSorterController.cxx
@@ -353,15 +353,7 @@ bool SlideSorterController::Command (
             pWindow->ReleaseMouse();
 
             Point aMenuLocation (0,0);
-            if (rEvent.IsMouseEvent())
-            {
-                // We have to explicitly specify the location of the menu
-                // when the slide sorter is placed in an undocked child
-                // menu.  But when it is docked it does not hurt, so we
-                // specify the location always.
-                aMenuLocation = rEvent.GetMousePosPixel();
-            }
-            else
+            if (!rEvent.IsMouseEvent())
             {
                 // The event is not a mouse event.  Use the center of the
                 // focused page as top left position of the context menu.
@@ -384,7 +376,10 @@ bool SlideSorterController::Command (
                 if (pDispatcher != nullptr)
                 {
                     mbContextMenuOpen = true;
-                    pDispatcher->ExecutePopup( aPopupId, pWindow, &aMenuLocation );
+                    if (!rEvent.IsMouseEvent())
+                        pDispatcher->ExecutePopup(aPopupId, pWindow, &aMenuLocation);
+                    else
+                        pDispatcher->ExecutePopup(aPopupId);
                     mbContextMenuOpen = false;
                     mrSlideSorter.GetView().UpdatePageUnderMouse();
                     ::rtl::Reference<SelectionFunction> pFunction(GetCurrentSelectionFunction());
